feat: ExpeditionView протестировано: добавление экспедиций работает, просмотр таймера работает.